--- a/experience/index.html
+++ b/experience/index.html
@@ -42,50 +42,14 @@
 
   <div class="timeline">
 
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Self Employed</h2>
-        </div>
-        <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>DevIncept (Top Contributor)</h2>
-          </div>
-          <div class="desc">
-              <h3>DCP 2021 Contributor | Open Source Program</h3>
-              <p>July 2021 - October 2021</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>LetsGrowMore Summer of Code</h2>
-          </div>
-          <div class="desc">
-              <h3>LGM-SOC'21 Participant | Open Source Program</h3>
-              <p>June 2021 - August 2021</p>
-          </div>
-        </div>
-      </div>
-
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
+          <h2>Oracle - Bengaluru</h2>
         </div>
         <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <h3>SRE</h3>
+            <p>January 2025 - Present</p>
         </div>
       </div>
     </div>
@@ -93,11 +57,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Oracle - Bengaluru</h2>
         </div>
         <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
+            <h3>OPS & TAM Lead</h3>
+            <p>September 2022 - December 2024</p>
         </div>
       </div>
     </div>
@@ -105,11 +69,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Oracle - Bengaluru</h2>
         </div>
         <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
+            <h3>Senior Monitoring Engineer</h3>
+            <p>August 2019 - August 2022</p>
         </div>
       </div>
     </div>
@@ -117,11 +81,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Frshr Technologies</h2>
+          <h2>Tata Communications Ltd - Chennai</h2>
         </div>
         <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
+            <h3>Senior Technical Associate</h3>
+            <p>August 2019 - August 2022</p>
         </div>
       </div>
     </div>
@@ -129,11 +93,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>WonderingBlog</h2>
+          <h2>NetEnrich Technologies - Hyderabad</h2>
         </div>
         <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
+            <h3>Senior Analyst</h3>
+            <p>January 2014 - March 2016</p>
         </div>
       </div>
     </div>
@@ -141,11 +105,11 @@
     <div class="container left">
         <div class="content">
           <div class="tag">
-            <h2>Hacktoberfest 2020</h2>
+            <h2>Agni Informations Systems Pvt Ltd - Bengaluru</h2>
           </div>
           <div class="desc">
-              <h3>Contributor | Open Source Program</h3>
-              <p>October 2020 - November 2020</p>
+              <h3>System / Network Administrator</h3>
+              <p>March 2012 - December 2013</p>
           </div>
         </div>
       </div>
@@ -169,7 +133,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
+          <h3>Raj's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
@@ -185,21 +149,20 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 704-302-4736</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
+          <p> <i class="fas fa-phone"></i>+91 996-222-9914</p>
+          <p> <i class="fas fa-envelope"></i>rajmohanacharya@outlook.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Udupi, India-412206</p>
           <div class="share">
 
-            <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
-            <a href="https://github.com/jigar-sable" class="fab fa-github" target="_blank"></a>
-            <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
-            <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a>
-            <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/rajmohanacharya" class="fab fa-linkedin" target="_blank"></a>
+            <a href="https://github.com/rajmohanacharya" class="fab fa-github" target="_blank"></a>
+            <a href="mailto:rajmohanacharya@outlook.com" class="fas fa-envelope" target="_blank"></a>
+            <a href="https://twitter.com/nirvanaraj" class="fab fa-twitter" target="_blank"></a>
           </div>
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> jigar sable</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/rajmohanacharya">Raj Mohan</a></h1>
 
 </section>
 <!-- footer section ends -->
@@ -220,4 +183,5 @@
 <script src="./script.js"></script>
 
 </body>
+
 </html>
