--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
 
   <div class="timeline">
 
-    <div class="container right">
+<div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Self Employed</h2>
+          <h2>Oracle - Bengaluru</h2>
         </div>
         <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
+            <h3>SRE</h3>
+            <p>January 2025 - Present</p>
         </div>
       </div>
     </div>
@@ -224,11 +224,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
+          <h2>Oracle - Bengaluru</h2>
         </div>
         <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <h3>OPS & TAM Lead</h3>
+            <p>September 2022 - December 2024</p>
         </div>
       </div>
     </div>
@@ -236,11 +236,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Oracle - Bengaluru</h2>
         </div>
         <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
+            <h3>Senior Monitoring Engineer</h3>
+            <p>August 2019 - August 2022</p>
         </div>
       </div>
     </div>
@@ -248,11 +248,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Tata Communications Ltd - Chennai</h2>
         </div>
         <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
+            <h3>Senior Technical Associate</h3>
+            <p>August 2019 - August 2022</p>
         </div>
       </div>
     </div>
@@ -260,27 +260,26 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Frshr Technologies</h2>
+          <h2>NetEnrich Technologies - Hyderabad</h2>
         </div>
         <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
+            <h3>Senior Analyst</h3>
+            <p>January 2014 - March 2016</p>
         </div>
       </div>
     </div>
 
     <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>WonderingBlog</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
+        <div class="content">
+          <div class="tag">
+            <h2>Agni Informations Systems Pvt Ltd - Bengaluru</h2>
+          </div>
+          <div class="desc">
+              <h3>System / Network Administrator</h3>
+              <p>March 2012 - December 2013</p>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
 
   <div class="morebtn">
     <a href="/experience" class="btn"><span>View All</span>
@@ -409,6 +408,7 @@
 
 </body>
 </html>
+
 
 
 
