--- a/index.html
+++ b/index.html
@@ -143,9 +143,20 @@
         <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
         </div>
         <div class="content">
-        <h3>Bachelor of Engineering in Information Technology</h3>
-        <p>Zeal College of engineering and research | SPPU</p>
-        <h4>2020-2024 | Pursuing</h4>
+        <h3>Bachelor of Engineering in Electrical Electronics</h3>
+        <p>Vignana Bharathi Institute of Technologo - Hyderabad</p>
+        <h4>2007-2011 | Completed</h4>
+        </div>
+    </div>
+        
+    <div class="box">
+        <div class="image">
+        <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
+        </div>
+        <div class="content">
+        <h3>Board of Intermediate Education</h3>
+        <p>Little Flower Junior College - Hyderabad</p>
+        <h4>2006-2007 | Completed</h4>
         </div>
     </div>
 
@@ -154,9 +165,9 @@
       <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
       </div>
       <div class="content">
-      <h3>HSC Science | Informatic Practices</h3>
-      <p>Shri  L. G. Haria Multipurpose School | CBSE</p>
-      <h4>2018-2020 | Completed</h4>
+      <h3>Board of Secondary Education </h3>
+      <p>Auxilium High School - Hyderabad</p>
+      <h4>1995-2005 | Completed</h4>
       </div>
     </div>
 
@@ -405,6 +416,7 @@
 
 </body>
 </html>
+
 
 
 
