--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
+        <img draggable="false" src="./assets/images/educat/vbit.png" alt="">
         </div>
         <div class="content">
         <h3>Bachelor of Engineering in Electrical Electronics</h3>
@@ -151,7 +151,7 @@
         
     <div class="box">
         <div class="image">
-        <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
+        <img draggable="false" src="./assets/images/educat/lfjc.png" alt="">
         </div>
         <div class="content">
         <h3>Board of Intermediate Education</h3>
@@ -162,7 +162,7 @@
 
     <div class="box">
       <div class="image">
-      <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
+      <img draggable="false" src="./assets/images/educat/auxilium.png" alt="">
       </div>
       <div class="content">
       <h3>Board of Secondary Education </h3>
@@ -416,6 +416,7 @@
 
 </body>
 </html>
+
 
 
 
