--- a/index.html
+++ b/index.html
@@ -79,12 +79,11 @@
         <h3>I'm Raj</h3>
         <span class="tag">Site Reliability Engineer</span>
         
-        <p>I am a SRE & Monitoring Expert based in Udupi, India. 
-          I am an Electrical & Electronics undergraduate from JNTU, Hyderabad.
-          I am very passionate about improving my coding skills & developing monitoring & self-service solutions
-          I build Full Stack Monitoring Solutions, App-Migrations, and broadening scope to Observability.
-          Working for myself to improve my skills over DevOPS, SRE Frameworks.
-          Love to build-deploy-deliver-maintain scalable-reliable-self-healing solutions. </p>
+        <p>I am a Site Reliability Engineering (SRE) and Monitoring Specialist based in Udupi, India.
+With an undergraduate degree in Electrical and Electronics Engineering from JNTU, Hyderabad.
+I possess a strong passion for Computer Science and Information Technology, focusing on developing advanced monitoring and self-service solutions. 
+My expertise encompasses building full-stack monitoring platforms, supporting application migrations, and expanding capabilities within the observability domain. 
+Actively pursuing continuous improvement, I specialize in DevOps practices and SRE frameworks, dedicated to designing, deploying, and maintaining scalable, reliable, and self-healing systems. </p>
         
         <div class="box-container">
             <!-- <div class="box">
@@ -416,6 +415,7 @@
 
 </body>
 </html>
+
 
 
 
