--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="./assets/images/profile2.jpg" alt="">
+        <img draggable="false" class="tilt" src="./assets/images/rajdp.jpg" alt="">
     </div>
     <div class="content">
         <h3>I'm Raj</h3>
@@ -415,6 +415,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
