--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/hero.png" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/hero2.jpeg" alt="">
 </div>
 </section>
 <!-- hero section ends -->
@@ -415,6 +415,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
