--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#work">Work</a></li>
+            <!--<li><a href="#work">Work</a></li>-->
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
             </ul>
@@ -176,7 +176,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 
 <!-- work project section starts -->
-<section class="work" id="work">
+<!--<section class="work" id="work">
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
@@ -198,7 +198,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
       </div>
     </div> -->
 
-</div>
+<!--</div>
 
 <div class="viewall">
   <a href="/projects" class="btn"><span>View All</span>
@@ -415,6 +415,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
