--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
           <a href="#about"><i class="fas fa-chevron-circle-right"></i> about</a>
           <a href="#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
           <a href="#education"><i class="fas fa-chevron-circle-right"></i> education</a>
-          <a href="#work"><i class="fas fa-chevron-circle-right"></i> work</a>
+          <!--<a href="#work"><i class="fas fa-chevron-circle-right"></i> work</a>-->
           <a href="#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
       </div>
 
@@ -371,7 +371,6 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
               <a href="https://github.com/rajmohanacharya" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
               <a href="mailto:rajmohanacharya@outlook.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
               <a href="https://twitter.com/nirvanaraj" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
-              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
           </div>
       </div>
   </div>
@@ -415,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
