--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
         <img draggable="false" src="./assets/images/educat/vbit.png" alt="">
         </div>
         <div class="content">
-        <h3>Bachelor of Engineering in Electrical Electronics</h3>
-        <p>Vignana Bharathi Institute of Technologo - Hyderabad</p>
+        <h3>Bachelor of Tech. in Electrical & Electronics Engineering</h3>
+        <p>Vignana Bharathi Institute of Technology - Hyderabad</p>
         <h4>2007-2011 | Completed</h4>
         </div>
     </div>
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
