--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
             </div> -->
             <div class="box">
               <p><span> email : </span> rajmohanacharya@outlook.com</p>
-              <p><span> place : </span> Udupi, India - 576101</p>
+              <p><span> place : </span> Udupi, Karnataka, India</p>
             </div>
         </div>
         
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
