--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <ul class="social-icons">
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/rajmohanacharya/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
           <li><a class="github" aria-label="GitHub" href="https://github.com/rajmohanacharya" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/nirvanaraj" target="_blank"><i class="fab fa-twitter"></i></a></li>
+         <!-- <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/nirvanaraj" target="_blank"><i class="fab fa-twitter"></i></a></li>-->
         </ul>
       </div>
     </div>
@@ -362,9 +362,9 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 9962229914</p>
+          <!--<p> <i class="fas fa-phone"></i>+91 9962229914</p>-->
           <p> <i class="fas fa-envelope"></i>rajmohanacharya@outlook.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Udupi, India - 576101</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Udupi, Karnataka, India</p>
           <div class="share">
 
               <a href="https://www.linkedin.com/in/rajmohanacharya" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
