--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 
 <!-- work project section starts -->
-<!--<section class="work" id="work">
+<section class="work" id="Projects">
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
   <div class="box-container">
 
-    <!-- <div class="box tilt">
+    <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
       <div class="content">
         <div class="tag">
@@ -196,9 +196,9 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
           </div>
         </div>
       </div>
-    </div> -->
+    </div> 
 
-<!--</div>
+</div>
 
 <div class="viewall">
   <a href="/projects" class="btn"><span>View All</span>
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
