--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 
 <!-- work project section starts -->
-<section class="work" id="Projects">
+<section class="projects" id="Projects">
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
@@ -192,7 +192,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
           <div class="btns">
             <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://rajmohanacharya.github.io/" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
