--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
   <div class="box-container">
 
     <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
+      <img draggable="false" src="./assets/images/projects/raj-portfolio-website.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Portfolio Website</h3>
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
