--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 
 <!-- work project section starts -->
-<section class="projects" id="Projects">
+<section class="work" id="Projects">
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
