--- a/projects/index.html
+++ b/projects/index.html
@@ -32,14 +32,14 @@
 <!-- navbar ends -->
 
 <!-- work project section starts -->
-<section class="work" id="work">
+<section class="work" id="projects">
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
   
   <div id="filters" class="button-group">
     <button class="btn is-checked" data-filter="*">All Projects</button>
-<!--    <button class="btn" data-filter=".mern">MERN Stack</button>
-    <button class="btn" data-filter=".lamp">LAMP Stack</button>
+    <button class="btn" data-filter=".mern">URL Monitor Bash Script</button>
+<!--    <button class="btn" data-filter=".lamp">LAMP Stack</button>
     <button class="btn" data-filter=".basicweb">Basic Web</button>
     <button class="btn" data-filter=".android">Android App</button>
   </div>
@@ -99,3 +99,4 @@
 </body>
 
 </html>
+
