--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 
 <!-- work project section starts -->
-<section class="work" id="Projects">
+<section class="work" id="work">
 
-  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
+  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects </span></h2>
 
-  <div class="box-container">
+  <!--<div class="box-container">
 
     <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/raj-portfolio-website.png" alt="" />
@@ -196,7 +196,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
           </div>
         </div>
       </div>
-    </div> 
+    </div> -->
 
 </div>
 
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
