--- a/projects/index.html
+++ b/projects/index.html
@@ -32,7 +32,7 @@
 <!-- navbar ends -->
 
 <!-- work project section starts -->
-<section class="work" id="projects">
+<section class="work" id="work">
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
   
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 
@@ -99,4 +99,5 @@
 </body>
 
 </html>
+
 
