--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#education">Education</a></li>
-            <!--<li><a href="#work">Work</a></li>-->
+            <li><a href="#work">Work</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
             </ul>
@@ -180,9 +180,9 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects </span></h2>
 
-  <!--<div class="box-container">
+  <div class="box-container">
 
-    <div class="box tilt">
+     <!--<div class="box tilt">
       <img draggable="false" src="./assets/images/projects/raj-portfolio-website.png" alt="" />
       <div class="content">
         <div class="tag">
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
