--- a/projects/index.html
+++ b/projects/index.html
@@ -42,7 +42,7 @@
 <!--    <button class="btn" data-filter=".lamp">LAMP Stack</button>
     <button class="btn" data-filter=".basicweb">Basic Web</button>
     <button class="btn" data-filter=".android">Android App</button>
-  </div>
+  </div>-->
 
   <div class="box-container">
 
@@ -99,6 +99,7 @@
 </body>
 
 </html>
+
 
 
 
