--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#work">Work</a></li>
             <li><a href="#experience">Experience</a></li>
-            <li><a href="#contact">Contact</a></li>
+ <!--           <li><a href="#contact">Contact</a></li> -->
             </ul>
         </nav>
 </header>
@@ -300,7 +300,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 <!-- experience section ends -->
 
 <!-- contact section starts -->
-<section class="contact" id="contact">
+<!--<section class="contact" id="contact">
   
   <h2 class="heading"><i class="fas fa-headset"></i> Get in <span>Touch</span></h2>
 
@@ -336,7 +336,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
     </form>
   </div>
   </div>
-</section>
+</section> -->
 <!-- contact section ends -->
 
 
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
