--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
               <a href="https://www.linkedin.com/in/rajmohanacharya" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
               <a href="https://github.com/rajmohanacharya" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-              <a href="mailto:rajmohanacharya@outlook.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="https://twitter.com/nirvanaraj" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
+    <!--           <a href="mailto:rajmohanacharya@outlook.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>-->
+ <!--             <a href="https://twitter.com/nirvanaraj" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>-->
           </div>
       </div>
   </div>
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
