--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#work">Work</a></li>
             <li><a href="#experience">Experience</a></li>
- <!--           <li><a href="#contact">Contact</a></li> -->
+            <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
 </header>
@@ -414,6 +414,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
