--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 
 <!-- footer section starts -->
-<section class="footer">
+<!--<section class="footer"> -->
+<section class="footer" id="contact">
 
   <div class="box-container">
 
@@ -414,6 +415,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
