--- a/experience/index.html
+++ b/experience/index.html
@@ -149,9 +149,9 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 996-222-9914</p>
+          <!-- <p> <i class="fas fa-phone"></i>+91 996-222-9914</p> -->
           <p> <i class="fas fa-envelope"></i>rajmohanacharya@outlook.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Udupi, India-412206</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Udupi, Karnataka, India</p>
           <div class="share">
 
             <a href="https://www.linkedin.com/in/rajmohanacharya" class="fab fa-linkedin" target="_blank"></a>
@@ -185,4 +185,5 @@
 </body>
 
 </html>
+
 
