--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
       <div class="box">
           <h3>Raj's Portfolio</h3>
-          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
+          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀</p>
       </div>
 
       <div class="box">
@@ -370,6 +370,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
               <a href="https://www.linkedin.com/in/rajmohanacharya" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
               <a href="https://github.com/rajmohanacharya" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="https://wa.me/+919962229914" class="fab fa-whatsapp" aria-label="Whatsapp" target="_blank"></a>
     <!--           <a href="mailto:rajmohanacharya@outlook.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>-->
  <!--             <a href="https://twitter.com/nirvanaraj" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>-->
           </div>
@@ -415,6 +416,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
