--- a/experience/index.html
+++ b/experience/index.html
@@ -156,8 +156,8 @@
 
             <a href="https://www.linkedin.com/in/rajmohanacharya" class="fab fa-linkedin" target="_blank"></a>
             <a href="https://github.com/rajmohanacharya" class="fab fa-github" target="_blank"></a>
-            <a href="mailto:rajmohanacharya@outlook.com" class="fas fa-envelope" target="_blank"></a>
-            <a href="https://twitter.com/nirvanaraj" class="fab fa-twitter" target="_blank"></a>
+            <!-- <a href="mailto:rajmohanacharya@outlook.com" class="fas fa-envelope" target="_blank"></a>
+            <a href="https://twitter.com/nirvanaraj" class="fab fa-twitter" target="_blank"></a>-->
           </div>
       </div>
   </div>
@@ -185,5 +185,6 @@
 </body>
 
 </html>
+
 
 
