--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     </a>
     <div class="socials">
         <ul class="social-icons">
+          <li><a class="whatsapp" aria-label="Whatsapp" href="https://wa.me/+919962229914" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/rajmohanacharya/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
           <li><a class="github" aria-label="GitHub" href="https://github.com/rajmohanacharya" target="_blank"><i class="fab fa-github"></i></a></li>
          <!-- <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/nirvanaraj" target="_blank"><i class="fab fa-twitter"></i></a></li>-->
@@ -416,6 +417,7 @@ Actively pursuing continuous improvement, I specialize in DevOps practices and S
 
 </body>
 </html>
+
 
 
 
