--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="./assets/images/rajdp.jpg" alt="">
+        <img draggable="false" class="tilt" src="./assets/images/Raj_Smiling_6_compressed.png" alt="">
     </div>
     <div class="content">
         <h3>I'm Raj</h3>
@@ -419,6 +419,7 @@
 
 </body>
 </html>
+
 
 
 
